// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bar-height prop 1`] = `
<div class="van-slider" style="height: 10px;">
  <div class="van-slider__bar" style="width: 50%;">
    <div role="slider" tabindex="0" aria-valuemin="0" aria-valuenow="50" aria-valuemax="100" aria-orientation="horizontal" class="van-slider__button-wrapper">
      <div class="van-slider__button"></div>
    </div>
  </div>
</div>
`;

exports[`button-size prop 1`] = `
<div class="van-slider">
  <div class="van-slider__bar" style="width: 50%;">
    <div role="slider" tabindex="0" aria-valuemin="0" aria-valuenow="50" aria-valuemax="100" aria-orientation="horizontal" class="van-slider__button-wrapper">
      <div class="van-slider__button" style="width: 10px; height: 10px;"></div>
    </div>
  </div>
</div>
`;

exports[`click bar 1`] = `
<div class="van-slider van-slider--disabled">
  <div class="van-slider__bar" style="width: 50%;">
    <div role="slider" tabindex="-1" aria-valuemin="0" aria-valuenow="50" aria-valuemax="100" aria-orientation="horizontal" class="van-slider__button-wrapper">
      <div class="van-slider__button"></div>
    </div>
  </div>
</div>
`;

exports[`click bar 2`] = `
<div class="van-slider">
  <div class="van-slider__bar" style="width: 100%;">
    <div role="slider" tabindex="0" aria-valuemin="0" aria-valuenow="100" aria-valuemax="100" aria-orientation="horizontal" class="van-slider__button-wrapper">
      <div class="van-slider__button"></div>
    </div>
  </div>
</div>
`;

exports[`click vertical 1`] = `
<div class="van-slider van-slider--vertical">
  <div class="van-slider__bar" style="height: 100%;">
    <div role="slider" tabindex="0" aria-valuemin="0" aria-valuenow="100" aria-valuemax="100" aria-orientation="vertical" class="van-slider__button-wrapper">
      <div class="van-slider__button"></div>
    </div>
  </div>
</div>
`;

exports[`drag button 1`] = `
<div class="van-slider van-slider--disabled">
  <div class="van-slider__bar" style="width: 50%;">
    <div role="slider" tabindex="-1" aria-valuemin="0" aria-valuenow="50" aria-valuemax="100" aria-orientation="horizontal" class="van-slider__button-wrapper">
      <div class="van-slider__button"></div>
    </div>
  </div>
</div>
`;

exports[`drag button 2`] = `
<div class="van-slider">
  <div class="van-slider__bar" style="width: 100%;">
    <div role="slider" tabindex="0" aria-valuemin="0" aria-valuenow="100" aria-valuemax="100" aria-orientation="horizontal" class="van-slider__button-wrapper">
      <div class="van-slider__button"></div>
    </div>
  </div>
</div>
`;

exports[`drag button vertical 1`] = `
<div class="van-slider van-slider--vertical">
  <div class="van-slider__bar" style="height: 100%;">
    <div role="slider" tabindex="0" aria-valuemin="0" aria-valuenow="100" aria-valuemax="100" aria-orientation="vertical" class="van-slider__button-wrapper">
      <div class="van-slider__button"></div>
    </div>
  </div>
</div>
`;
